Fix flexwrap

--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@ body{
 }
 
 /* HEADER */
-  
+
 header{
   font-family: 'VT323', monospace;
   font-size: 40px;
@@ -34,7 +34,7 @@ header{
   align-items: center;
   gap:20px;
   width: 150px;
-  margin-bottom: 30px;
+  margin: 30px;
 }
 
 .size{
@@ -66,7 +66,7 @@ button:hover{
   display: flex;
   justify-content: center;
   align-items: center;
-  margin-bottom: 30px;
+  margin: 30px;
 }
 
 .grid{
